--- a/pom.xml
+++ b/pom.xml
@@ -15,19 +15,15 @@
         <junit.version>4.12</junit.version>
         <selenium-java.version>3.141.59</selenium-java.version>
         <maeven.junit.surfire>2.20</maeven.junit.surfire>
+        <allure.qameta>2.13.5</allure.qameta>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-testng</artifactId>
-            <version>2.12.0</version>
-        </dependency>
 
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit4</artifactId>
-            <version>2.13.5</version>
+            <version>${allure.qameta}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
