Ajustes no Allure
Arrumei o problema que estava tendo com o Allure e gerei o report dos meus testes.

--- a/pom.xml
+++ b/pom.xml
@@ -72,15 +72,11 @@
                     </properties>
                     <systemProperties>
                         <property>
-                            <name>junit.jupiter.extensions.autodetection.enabled</name>
-                            <value>true</value>
-                        </property>
-                        <property>
                             <name>allure.results.directory</name>
-                            <value>${basedir}/target/allure-results</value>
+                            <value>${project.build.directory}/allure-results</value>
                         </property>
                     </systemProperties>
-
+                    <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
                 <dependencies>
                     <dependency>
